# retail-data-project

./: .gitignore  README.md  alert_runner.sh  automation.py  automation.sh  docker-compose.yaml  generate_xml.py  main.py  products.xml  pyproject.toml  requirements.txt  script_runner.sh
alerts/: mmafightstore.py  ntfy_alerts.py
dockerfiles/: Dockerfile
retail_scraper/: output.csv  scrapy.cfg
retail_scraper/retail_scraper/: middlewares.py  pipelines.py  settings.py
retail_scraper/retail_scraper/spiders/: mmafactory_wrestling_shoes.py  mmafightstore_wrestling_shoes.py  running_warehouse.py
retaildbt/: dbt_project.yml
retaildbt/models/feeds/: feed_mmafightstore_wrestlingshoes.sql
retaildbt/models/silver/: silver_mmafightstore_wrestlingshoes.sql  silver_runningwarehouse.sql
retaildbt/seeds/: shoe_size.csv
scripts/: id_fix.py  min_shoe_size_val.sql
